# docutray-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: .env.example  README.md  basic_usage.py  convert_document.py  execute_step.py  execute_steps.py  identify_document.py  pyproject.toml
openspec/: config.yaml
openspec/changes/api-resources/: tasks.md
openspec/changes/api-resources/specs/convert-resource/: spec.md
openspec/changes/archive/2025-02-05-docs-release-prep/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-02-05-docs-release-prep/specs/api-reference-generator/: spec.md
openspec/changes/archive/2025-02-05-docs-release-prep/specs/sdk-documentation/: spec.md
openspec/changes/archive/2026-02-04-api-resources/: design.md  proposal.md
openspec/changes/archive/2026-02-04-api-resources/specs/async-polling/: spec.md
openspec/changes/archive/2026-02-04-core-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-04-type-safety/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-advanced-features/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-pypi-publish-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-testing-quality/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-usage-examples/: design.md  proposal.md
openspec/changes/usage-examples/: tasks.md
openspec/changes/usage-examples/specs/usage-examples/: spec.md
openspec/specs/api-reference-generator/: spec.md
openspec/specs/client/: spec.md
openspec/specs/convert-resource/: spec.md
openspec/specs/document-types-resource/: spec.md
openspec/specs/exceptions/: spec.md
openspec/specs/file-handling/: spec.md
openspec/specs/http-transport/: spec.md
openspec/specs/identify-resource/: spec.md
openspec/specs/knowledge-bases/: spec.md
openspec/specs/pagination/: spec.md
openspec/specs/pre-commit-hooks/: spec.md
openspec/specs/pypi-publish/: spec.md
openspec/specs/raw-response/: spec.md
openspec/specs/sdk-documentation/: spec.md
openspec/specs/steps-resource/: spec.md
openspec/specs/test-coverage/: spec.md
openspec/specs/type-definitions/: spec.md
scripts/: gen_api_ref.py
src/docutray/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _files.py  _http.py  _pagination.py  _polling.py  _response.py  _types.py  _utils.py  _version.py
src/docutray/resources/: __init__.py  convert.py  document_types.py  identify.py  knowledge_bases.py  steps.py
src/docutray/types/: __init__.py  convert.py  document_type.py  identify.py  knowledge_base.py  shared.py  step.py
src/docutray_python/: __init__.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_files.py  test_pagination.py  test_polling.py  test_raw_response.py  test_response.py  test_retry.py
tests/test_resources/: __init__.py  test_convert.py  test_document_types.py  test_identify.py  test_knowledge_bases.py  test_steps.py
(+14 files in other folders)
