[project]
name = "docutray"
version = "0.1.0"
description = "Python library for the DocuTray API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Roberto Arce", email = "robertoarcee@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "docutray",
    "ocr",
    "document processing",
    "data extraction",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://docutray.com"
Documentation = "https://docs.docutray.com"
Repository = "https://github.com/docutray/docutray-python"
Changelog = "https://github.com/docutray/docutray-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
