[project]
name = "docutray"
version = "0.1.0"
description = "Python library for the DocuTray API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Roberto Arce", email = "robertoarcee@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.0,<1",
    "pydantic>=2.0,<3",
    "typing-extensions>=4.5",
]
keywords = [
    "docutray",
    "ocr",
    "document processing",
    "data extraction",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://docutray.com"
Documentation = "https://docs.docutray.com"
Repository = "https://github.com/docutray/docutray-python"
Changelog = "https://github.com/docutray/docutray-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["docutray_python"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
